# Overlay_ai

./: .gitignore  LICENSE  PERFORMANCE.md  README.md  StudyGlance.spec  USAGE.md  overlay_qna_prod.py  requirements.txt  requirements_full.txt
apps/overlay/: requirements.txt
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  live_worker.py  main.py  perf.py  routes.py  schemas.py  ws.py
backend/app/llm/: openai_client.py
backend/app/ocr/: capture.py  delta.py  preprocess.py  tesseract.py
backend/app/rag/: index.py  select.py
backend/app/sample/: sample_events.json
backend/app/storage/: export.py  session_db.py
backend/app/tests/: test_api.py  test_delta.py  test_rag.py
backend/app/tools/: demo_sim.py
scripts/: build.ps1  build.sh  build_overlay_linux.sh  build_overlay_macos.sh  build_overlay_win.ps1  compare_perf.py  dev.ps1  dev.sh  line_profile.ps1  line_profile.sh  memtrace.ps1  memtrace.sh  package_linux.sh  package_macos.sh  package_win.ps1  profile_api.py  profile_capture.py  run_overlay.ps1  windows.iss
web/site/: index.html  package-lock.json  package.json
web/site/src/: App.tsx  index.css
web/site/src/components/: FeatureGrid.tsx  Footer.tsx  Hero.tsx  Navbar.tsx
web/site/src/pages/: Download.tsx  Home.tsx  Quickstart.tsx
