[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "overlayai-backend"
version = "0.1.0"
description = "OverlayAI backend API"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["app/tests", "tests"]
